# fastfoodDataBase

./: .gitignore  CODE_OF_CONDUCT.txt  LICENSE  README.md  docker-compose.yml  gettingstarted.md  hard-reset.sh  models.py  plan.txt
api/: Dockerfile
api/app/: Rocket.toml  diesel.toml  seed.sql
api/app/migrations/2020-11-17-043956_create_tables/: down.sql  up.sql
api/app/src/: main.rs  schema.rs  schema.rs.orig  schema.rs.patch  schema.rs.rej  schema.rs.unpatched  tests.rs
app/: Cargo.toml  Rocket.toml  dummy_data.sql  menus.txt  schema.dmp
app/migrations/2020-11-17-043956_create_tables/: up.sql
app/src/: models.rs  schema.patch  schema.rs
backend/: Dockerfile  requirements.txt
backend/api/: manage.py
backend/api/fastfood/: models.py  serializers.py  views.py
backend/api/fastfood/migrations/: 0001_initial.py  0002_auto_20210422_0458.py
backend/api/fastfoodapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/api/fastfoodapi/fastfood/: models.py
db_migration_runner/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/fastfood_frontend/: README.md  auth_config.json  package-lock.json  package.json  tailwind.config.js
frontend/fastfood_frontend/src/: App.vue  main.js
frontend/fastfood_frontend/src/components/: EntryListItem.vue  RestaurantListItem.vue
frontend/fastfood_frontend/src/router/: index.js
frontend/src/: App.vue
frontend/src/components/: EntryListItem.vue  NotFoundComponent.vue  TrustPanel.vue
frontend/src/router/: index.js
frontend/src/views/: About.vue  Entries.vue  Restaurants.vue
(+9 files in other folders)
