[package]
name = "app"
version = "0.1.0"
authors = ["brianhotopp <brihoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "diesel_postgres_pool"]
